syntax = "proto3";

package ares.messaging;

import "Templates/ExperimentTemplate.proto";
import "Templates/ParameterMetadata.proto";
import "PlannerInfo.proto";
import "Templates/PlannerAllocation.proto";
import "AnalyzerInfo.proto";
import "google/protobuf/wrappers.proto";

message CampaignTemplate {
	google.protobuf.StringValue unique_id = 1; // A unique id for this template
	repeated ExperimentTemplate experiment_templates = 2; // Collection of experiment templates to be used for generating executable experiments
	string name = 3; // Name of the campaign. Doesn't have to be descriptive, and is used for lookup
	int64 index = 4; // Index of the collection in which executed this template
	repeated ParameterMetadata plannable_parameters = 5; // The plannable parameters or variables available to commands within experiments
	repeated PlannerAllocation planner_allocations = 6; // Collection of planner-to-parameter allocations for planning purposes
	AnalyzerInfo analyzer = 7; // the analyzer assigned to this template
}